# wagtail-admin-interface

./: README.md  pyproject.toml
wagtail_admin_interface/: context_processors.py  menu.py  urls.py  wagtail_hooks.py
wagtail_admin_interface/templates/wagtailadmin/: base.html
wagtail_admin_interface/templates/wagtailadmin/generic/: base.html
wagtail_admin_interface/templates/wagtailadmin/pages/: edit.html  index.html
